--- a/src/Components/header/header.scss
+++ b/src/Components/header/header.scss
@@ -2,3 +2,12 @@ h1 {
     text-align: center;
     margin: 5px auto;
 }
+
+.res {
+    text-align: end;
+    margin: 15px;
+}
+
+.res:hover {
+    cursor: pointer;
+}
